--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -1,9 +1,15 @@
 body {
     margin: 0px;
+    height: 100vh;
 }
 
 .appContainer {
     width: 100%;
+}
+
+.app-container {
+    display: flex;
+    justify-content: space-between;
 }
 
 /* Navbar */
@@ -24,4 +30,91 @@ body {
 
 .link-element {
     margin-left: 1rem;
+}
+
+/* Feed */
+.feed-container {
+    padding: 1rem;
+    width: fit-content;
+    max-width: 75%;
+}
+.cards-container {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+/* Feed cards */
+/* From Uiverse.io by alexruix */
+.person-card {
+    --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
+    width: 190px;
+    height: 254px;
+    padding: 5px;
+    border-radius: 1rem;
+    overflow: visible;
+    background: #f7ba2b;
+    background: var(--background);
+    position: relative;
+    z-index: 1;
+}
+
+.person-card::after {
+    position: absolute;
+    content: "";
+    top: 30px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    transform: scale(0.8);
+    filter: blur(25px);
+    background: #f7ba2b;
+    background: var(--background);
+    transition: opacity .5s;
+}
+
+.person-card-info {
+    --color: #181818;
+    background: var(--color);
+    color: var(--color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    border-radius: .7rem;
+}
+
+.person-card .title {
+    font-weight: bold;
+    letter-spacing: .1em;
+}
+
+/*Hover*/
+.person-card:hover::after {
+    opacity: 0;
+}
+
+.person-card:hover .person-card-info {
+    color: #f7ba2b;
+    transition: color 1s;
+}
+
+/* Chat */
+.chat-body {
+    width: 25vw;
+}
+
+.chat-textbox {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.chat-message-container {
+    height: 100%;
 }
