--- a/Frontend/src/styles/main.css
+++ b/Frontend/src/styles/main.css
@@ -106,6 +106,11 @@ body {
 /* Chat */
 .chat-body {
     width: 25vw;
+    border-style: dashed;
+    border-width: 3px;
+    border-color: white;
+
+    padding: 1rem;
 }
 
 .chat-textbox {
@@ -117,4 +122,33 @@ body {
 
 .chat-message-container {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.chat-write-box {
+    display: flex;
+}
+
+/* message */
+.message-body {
+    border-style: solid;
+    border-width: 2px;
+    border-color: white;
+    margin: 3px;
+    border-radius: 1rem;
+    width: 70%;
+
+    background-color: rgb(28, 77, 62);
+}
+
+.message-body p {
+    margin: 0px;
+    margin: 5px
+}
+
+.local-message {
+    align-self: flex-end;
+
+    background-color: rgb(38, 72, 108);
 }
